Update website with Lyla Kiani's information - updated title, name, bio, education, technical skills, and headshot references

--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "David Florian"
+title                    : "Lyla Kiani"
 title_separator          : "-"
 subtitle                 : "Example Website for Class"
-name                     : &name "David Florian" # &name is a YAML anchor which can be *referenced later
-description              : &description "Example website for class "
+name                     : &name "Lyla Kiani" # &name is a YAML anchor which can be *referenced later
+description              : &description "Personal website of Lyla Kiani"
 url                      : https://davidflorianjr.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : 
@@ -97,16 +97,17 @@ analytics:
 # Site Author
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
-  avatar           : "assets/img/David_Headshot_web2.jpg"
-  bio              : "An engineer with a passion for teaching "
+  avatar           : "assets/img/Screenshot 2026-01-07 at 5.54.53 PM.jpg"
+  bio              : "A senior committed to getting a digital fabrication minor"
   location         : "Nashville, TN"
+  hometown         : "Brooklyn, NY"
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/DrD-Flo"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/dr.dflo"
+      url: "https://github.com/kianils"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/lyla-kiani/"
 
 
 # Site Footer
