--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,10 @@
 main:
   - title: "Portfolio"
     url: /portfolio/
+  - title: "CS Projects"
+    url: /cs-projects/
   - title: "About"
-    url: /_pages/about
+    url: /about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
