Revert comic book reading feature
- Remove comics section and comic_log from reading.yml
- Remove comic-related HTML, JavaScript, and CSS
- Delete comic_card.html include
- Update reading log generation script to only handle books
- Restore reading page to pre-comic state

--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,9 @@ reCaptcha:
 
 atom_feed:
   path                   : # blank (default) uses feed.xml
+  hide                   : true   # hide Feed link in footer
 
-search                   : true # true, false (default)
+search                   : false # true, false (default) — disabled; no content to search
 search_full_content      : true # true, false (default)
 search_provider          : algolia # lunr (default), algolia
 algolia:
