--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,9 +30,8 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          # GitHub's recommended baseline for Pages/Jekyll builds.
-          # Using Ruby 3.3 can cause dependency resolution failures with github-pages.
-          ruby-version: "3.1"
+          # Must be >= 3.2 (e.g. connection_pool 3.x requires Ruby >= 3.2).
+          ruby-version: "3.2"
           bundler-cache: true
 
       - name: Setup Pages
