Run generate_reading_log in CI; update daily_log and header comments

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -38,6 +38,11 @@ jobs:
         id: pages
         uses: actions/configure-pages@v4
 
+      - name: Regenerate reading daily_log
+        run: |
+          pip install pyyaml --quiet
+          python3 scripts/generate_reading_log.py
+
       - name: Build with Jekyll
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
