--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ name                     : &name "Lyla Kiani" # &name is a YAML anchor which can
 description              : &description "Personal website of Lyla Kiani"
 url                      : https://kianils.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               :
+repository               : "kianils/kianils.github.io"
 github_username          : "kianils"   # for contributions; set GH_PAT secret for private repos 
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
